@@ -30,6 +30,10 @@ static const NSInteger const density_choices[] = {
     3, 2, 1, 0, 4, -1
 };
 
+static const CGFloat const zoom_choices[] = {
+    1, 10/9., 10/8., 8/6., 10/7., 9/6., 10/6., 7/4., 2, 0, -1
+};
+
 @interface AppDelegate
     : UITableViewController
     < UIApplicationDelegate,
@@ -43,7 +47,7 @@ static const NSInteger const density_choices[] = {
     UINavigationController *nav;
 
     NSSet *defaultSymbologies;
-    CGFloat defaultZoom;
+    CGFloat zoom;
 
     NSMutableArray *sections, *symbolEnables;
     NSInteger xDensity, yDensity;
@@ -85,7 +89,7 @@ static const NSInteger const density_choices[] = {
     // apply defaults for demo
     ZBarImageScanner *scanner = reader.scanner;
     continuous = NO;
-    defaultZoom = 1;
+    zoom = 1;
     reader.showsZBarControls = NO;
     reader.scanCrop = CGRectMake(0, .35, 1, .3);
 
@@ -341,14 +345,6 @@ static const NSInteger const density_choices[] = {
     [sections replaceObjectAtIndex: CONFIG_SECTION
               withObject: configs];
 
-    UITableViewCell *cropCell =
-        [[[UITableViewCell alloc]
-             initWithStyle: UITableViewCellStyleValue1
-             reuseIdentifier: nil]
-            autorelease];
-    cropCell.textLabel.text = @"scanCrop";
-    cropCell.detailTextLabel.text = NSStringFromCGRect(reader.scanCrop);
-
     UITableViewCell *xDensityCell =
         [[[UITableViewCell alloc]
              initWithStyle: UITableViewCellStyleValue1
@@ -369,11 +365,29 @@ static const NSInteger const density_choices[] = {
     yDensityCell.detailTextLabel.text =
         [NSString stringWithFormat: @"%d", yDensity];
 
+    UITableViewCell *cropCell =
+        [[[UITableViewCell alloc]
+             initWithStyle: UITableViewCellStyleValue1
+             reuseIdentifier: nil]
+            autorelease];
+    cropCell.textLabel.text = @"scanCrop";
+    cropCell.detailTextLabel.text = NSStringFromCGRect(reader.scanCrop);
+
+    UITableViewCell *zoomCell =
+        [[[UITableViewCell alloc]
+             initWithStyle: UITableViewCellStyleValue1
+             reuseIdentifier: nil]
+            autorelease];
+    zoomCell.textLabel.text = @"zoom";
+    zoomCell.detailTextLabel.text =
+        [NSString stringWithFormat: @"%g", zoom];
+
     [sections replaceObjectAtIndex: CUSTOM_SECTION
               withObject: [NSArray arrayWithObjects:
                               xDensityCell,
                               yDensityCell,
                               cropCell,
+                              zoomCell,
                               [self cellWithTitle: @"continuous"
                                     tag: 1
                                     checked: continuous],
@@ -510,8 +524,8 @@ static const NSInteger const density_choices[] = {
     [self.tableView reloadData];
     if([reader respondsToSelector: @selector(readerView)]) {
         reader.readerView.showsFPS = YES;
-        if(defaultZoom)
-            reader.readerView.zoom = defaultZoom;
+        if(zoom)
+            reader.readerView.zoom = zoom;
     }
     if(reader.sourceType == UIImagePickerControllerSourceTypeCamera)
         reader.cameraOverlayView = (reader.showsZBarControls) ? nil : overlay;
@@ -643,6 +657,19 @@ static const NSInteger const density_choices[] = {
     [self updateCropMask];
 }
 
+- (void) advanceZoom: (UILabel*) label
+{
+    int i;
+    for(i = 0; zoom_choices[i] >= 0;)
+        if(zoom == zoom_choices[i++])
+            break;
+    if(zoom_choices[i] < 0)
+        i = 0;
+    zoom = zoom_choices[i];
+    assert(zoom >= 0);
+    label.text = [NSString stringWithFormat: @"%g", zoom];
+}
+
 - (void) advanceDensity: (UILabel*) label
                   value: (NSInteger*) value
 {
@@ -731,6 +758,9 @@ static const NSInteger const density_choices[] = {
             [self advanceCrop: cell.detailTextLabel];
             break;
         case 3:
+            [self advanceZoom: cell.detailTextLabel];
+            break;
+        case 4:
             [self setCheck: continuous = !continuous
                   forCell: cell];
             break;
